<resources>
    <string name="app_name">OneTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="its_dummy_screenonly">Its Dummy ScreenOnly</string>
    <string name="profile">Profile</string>
    <string name="inbox">Inbox</string>
    <string name="post">Post</string>
    <string name="booking">Booking</string>
    <string name="home">Home</string>
    <string name="your_earning">Your Earning</string>
    <string name="your_earnings_this_month">Your earnings this month</string>
    <string name="manage_payout_methods"><u>Manage payout methods</u></string>
    <string name="earning_by_booking">Earning By Booking</string>
    <string name="select_date_range">Select date range</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
</resources>