<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/navigation_booking"
        android:title="@string/booking"
        android:icon="@drawable/baseline_confirmation_number_24" />
    <item
        android:id="@+id/navigation_post"
        android:title="@string/post"
        android:icon="@drawable/baseline_post_add_24" />
    <item
        android:id="@+id/navigation_inbox"
        android:title="@string/inbox"
        android:icon="@drawable/baseline_notifications_24" />
    <item
        android:id="@+id/navigation_account"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24" />
    <!-- Add other menu items -->
</menu>