<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#FAF9F9"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FAF9F9"
    tools:context=".AccountFragments">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_255sdp"
        android:orientation="vertical"
        android:background="@color/theme">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_20ssp"
            android:layout_marginHorizontal="@dimen/_12ssp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:layout_centerVertical="true"
                android:paddingVertical="@dimen/_4sdp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:background="@drawable/circle_shape"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_toRightOf="@id/img_back"
                android:text="@string/your_earning"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/img_back"
            android:text="@string/your_earnings_this_month"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_38ssp"
            android:fontFamily="@font/reboto_bold"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/img_back"
            android:text="$1000.00"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="Withdraw Balance"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/black"
            app:tabIndicator="@drawable/tabindicater"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:background="@drawable/shape_btn"
            android:layout_marginHorizontal="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/tv_manage_payoutmethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/img_back"
            android:text="@string/manage_payout_methods"/>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabSelectedTextColor="@color/theme"
        app:tabIndicatorHeight="@dimen/_2sdp"
        app:tabIndicator="@drawable/tabindicater"
        app:tabIndicatorColor="@color/theme"
        android:background="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/gray"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"/>


</LinearLayout>
</androidx.core.widget.NestedScrollView>